--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
        <div class="header-contacts">
        <ul class="contacts">
         <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-link link"><svg class="header-icon" width="16" height="12">
-            <use href="./image/icons.svg#icon-envelope"></use>
+            <use href="./image/icons-logo.svg#icon-envelope-hover-1" ></use>
         </svg>info@devstudio.com</a></li>
-        <li class="contacts-item"><a href="tel:+380961111111" class="contacts-link link"><svg class="header-icon" width="10" height="16">
-            <use href="./image/icons.svg#icon-smartphone"></use>
+        <li class="contacts-item"><a href="tel:+380961111111" class="contacts-link link"> <svg class="header-icon" width="10" height="16">
+            <use href="./image/icons-logo.svg#icon-smartphone-1"></use>
         </svg>+38 096 111 11 11</a></li>
        </ul>
     </div>
